--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,64 +1,30 @@
-name: CI/CD Pipeline
+name: Deploy to Azure AKS
 
 on:
   push:
     branches:
-      - main  # Trigger on push to main branch
-  pull_request:
-    branches:
-      - main  # Trigger on pull requests to main branch
+      - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      # Checkout the code
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      # Set up Python environment
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      # Install dependencies from requirements.txt
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # Run tests (if you have any test files)
-      - name: Run tests
-        run: |
-          # Add a command to run your tests, for example:
-          # pytest
-
-      # Build Docker image
-      - name: Build Docker image
-        run: |
-          docker build -t my-python-app .
-
-      # Push Docker image to Docker Hub (Optional, if you want to push)
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker tag my-python-app ${{ secrets.DOCKER_USERNAME }}/my-python-app:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/my-python-app:latest
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build  # This job will only run after the build job succeeds
-
     steps:
-      # Checkout the code again for deployment
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      # Example: Deploy to a server or cloud platform
-      # Add your deployment script or commands here
-      - name: Deploy to production
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Set AKS context
+        uses: azure/aks-set-context@v3
+        with:
+          resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
+          cluster-name: ${{ secrets.AZURE_AKS_CLUSTER }}
+
+      - name: Deploy to AKS using kubectl
         run: |
-          echo "Deploying the application to production!"
-          # You can add deployment scripts here, such as using AWS CLI, GCP CLI, etc.
+          kubectl apply -f k8s/
