--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Deploy to Azure AKS
+name: Azure Login with OIDC
 
 on:
   push:
@@ -10,25 +10,21 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
+  login-to-azure:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Login to Azure
+      - name: Azure Login via OIDC
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          allow-no-subscriptions: false
+          auth-type: SERVICE_PRINCIPAL
 
-      - name: Set AKS context
-        uses: azure/aks-set-context@v3
-        with:
-          resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
-          cluster-name: ${{ secrets.AZURE_AKS_CLUSTER }}
-
-      - name: Deploy to AKS
-        run: |
-          kubectl apply -f k8s/
+      - name: Azure CLI - Check Subscription
+        run: az account show
